[tool.poetry]
name = "pyxamstore"
version = "2.0.0"
description = "Python utility for parsing Xamarin AssemblyStore files"
authors = ["jakev", "AbhiTheModder"]
keywords = [
    "android",
    "device",
    "security",
    "mobile",
    "reverse-engineering",
    "Xamarin",
    "AssemblyStore",
    "reverse",
    "hacking",
]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AbhiTheModder/pyxamstore"
repository = "https://github.com/AbhiTheModder/pyxamstore"
documentation = "https://github.com/AbhiTheModder/pyxamstore"

[tool.poetry.dependencies]
python = "^3.6"
lz4 = "^4.3.3"
xxhash = "^3.4.1"
future = "^1.0.0"
pyelftools = "^0.29"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyxamstore = "pyxamstore:main"
